<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewCurpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputName"
            style="@style/Margin16"
            android:hint="@string/name_input"
            android:inputType="textPersonName"
            android:labelFor="@+id/FormLabelName" />

        <EditText
            android:id="@+id/inputFatherLastName"
            style="@style/Margin16"
            android:hint="@string/father_lastname_input"
            android:inputType="textPersonName"
            android:labelFor="@+id/FormLabelFatherLastName" />

        <EditText
            android:id="@+id/inputMotherLastName"
            style="@style/Margin16"
            android:hint="@string/mother_lastname_input"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/FormLabelGender"
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/gender_input" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/FormRadioGroupGender">

            <RadioButton
                android:id="@+id/radioMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/m_input" />

            <RadioButton
                android:id="@+id/radioWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/w_input" />
        </RadioGroup>

        <TextView
            android:id="@+id/FormLabelBirthday"
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/bday_input" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputBirthdayDay"
                style="@style/MarginDate"
                android:hint="@string/day_label"
                android:inputType="date"
                android:minWidth="48dp" />

            <EditText
                android:id="@+id/inputBirthdayMonth"
                style="@style/MarginDate"
                android:hint="@string/month_label"
                android:inputType="date"
                android:minWidth="48dp" />

            <EditText
                android:id="@+id/inputBirthdayYear"
                style="@style/MarginDate"
                android:hint="@string/year_label"
                android:inputType="date"
                android:minWidth="48dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/FormLabelStates"
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:labelFor="@+id/spinnerState"
            android:text="@string/states_label" />
        <Spinner
            android:id="@+id/spinnerState"
            style="@style/Margin16"
            android:layout_marginBottom="48dp"
            android:entries="@array/States"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img_btn"
            android:onClick="getImageFromGallery"/>

        <ImageView
            android:id="@+id/imageViewForm"
            style="@style/Margin16"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:background="@color/colorDarkGrey" />

        <Button
            style="@style/FormButton"
            android:id="@+id/ButtonGenerateCURP"
            android:text="@string/generate_curp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorWhite"
            android:onClick="saveCurpButton"/>


    </LinearLayout>

</ScrollView>